Add the schedule of 2023 fall

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -1,3 +1,83 @@
 # 2023 Fall
 
 ## Schedule
+
+### September 6th
+
+- Topic: Kick-off Meeting
+- Presenters: Cheng Li, Yiduo Wang
+
+### September 13th
+
+- Topic: TBA
+- Presenters: TBA
+
+### September 20th
+
+- Topic: TBA
+- Presenters: TBA
+
+### September 27th
+
+- Topic: TBA
+- Presenters: TBA
+
+### October 11th
+
+- Topic: TBA
+- Presenters: TBA
+
+### October 18th
+
+- Topic: TBA
+- Presenters: TBA
+
+### October 25th
+
+- Topic: TBA
+- Presenters: TBA
+
+### November 1st
+
+- Topic: TBA
+- Presenters: TBA
+
+### November 8th
+
+- Topic: TBA
+- Presenters: TBA
+
+### November 15th
+
+- Topic: TBA
+- Presenters: TBA
+
+### November 22nd
+
+- Topic: TBA
+- Presenters: TBA
+
+### November 29th
+
+- Topic: TBA
+- Presenters: TBA
+
+### December 6th
+
+- Topic: TBA
+- Presenters: TBA
+
+### December 13th
+
+- Topic: TBA
+- Presenters: TBA
+
+### December 20th
+
+- Topic: TBA
+- Presenters: TBA
+
+### December 27th
+
+- Topic: TBA
+- Presenters: TBA
