--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -9,8 +9,8 @@
 
 ### September 13th
 
-- Topic: TBA
-- Presenters: TBA
+- Topic: SPFresh: Incremental In-Place Update for Billion-Scale Vector Search
+- Presenters: Yuming Xu
 
 ### September 20th
 
