--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -15,16 +15,16 @@
 ### September 20th
 
 - Topic: TBA
-- Presenters: TBA
+- Presenters: Ping Gong
 
 ### September 27th
 
-- Topic: TBA
+- Topic: TBA (SOSP-THU)
 - Presenters: TBA
 
 ### October 11th
 
-- Topic: TBA
+- Topic: TBA (SOSP-THU)
 - Presenters: TBA
 
 ### October 18th
