--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -39,8 +39,8 @@
 
 ### November 1st
 
-- Topic: TBA
-- Presenters: TBA
+- Topic: Chardonnay: Fast and General Datacenter Transactions for On-Disk Databases
+- Presenters: Yicheng Zhang, Kunzhao Xu, Zheng Yang
 
 ### November 8th
 
