--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -11,6 +11,7 @@
 
 - Topic: SPFresh: Incremental In-Place Update for Billion-Scale Vector Search
 - Presenters: Yuming Xu
+- Links: [Paper](https://rec.ustc.edu.cn/share/c1837200-5170-11ee-aad1-b9843821eb70)
 
 ### September 20th
 
