--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -17,6 +17,7 @@
 
 - Topic: TBA
 - Presenters: Ping Gong
+- Links: [Paper](https://rec.ustc.edu.cn/share/8e0a3840-52d7-11ee-88af-eb03a68080c6)
 
 ### September 27th
 
