Add topic for Sep 20th

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -15,7 +15,7 @@
 
 ### September 20th
 
-- Topic: TBA
+- Topic: gSampler: General and Efficient GPU-based Graph Sampling for Graph Learning
 - Presenters: Ping Gong
 - Links: [Paper](https://rec.ustc.edu.cn/share/8e0a3840-52d7-11ee-88af-eb03a68080c6)
 
