--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -66,8 +66,8 @@
 
 ### December 6th
 
-- Topic: TBA
-- Presenters: TBA
+- Topic: Ditto: An Elastic and Adaptive Memory-Disaggregated Caching System
+- Presenters: Chao Bi
 
 ### December 13th
 
