--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -21,8 +21,9 @@
 
 ### September 27th
 
-- Topic: TBA (SOSP-THU)
-- Presenters: TBA
+- Topic: Falcon: Fast OLTP Engine for Persistent Cache and Non-Volatile Memory
+- Presenters: Zhicheng Ji
+- Links: [Paper](https://cloud.tsinghua.edu.cn/f/f6d25a2e0d6f4f66ba2c/)
 
 ### October 11th
 
