--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -37,7 +37,7 @@
 
 ### October 25th
 
-- Topic: TBA
+- Topic: Take Out the TraChe: Maximizing (Tra)nsactional Ca(che) Hit Rate
 - Presenters: Sen Han, Chenhan Wang
 
 ### November 1st
