--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -27,8 +27,8 @@
 
 ### October 11th
 
-- Topic: TBA (SOSP-THU)
-- Presenters: TBA
+- Topic: Partial Failure Resilient Memory Management System for (CXL-based) Distributed Shared Memory
+- Presenters: Mingxing Zhang
 
 ### October 18th
 
