--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -29,6 +29,7 @@
 
 - Topic: Partial Failure Resilient Memory Management System for (CXL-based) Distributed Shared Memory
 - Presenters: Mingxing Zhang
+- Links: [Paper](https://rec.ustc.edu.cn/share/d6d29d40-5c71-11ee-9d4f-c1660e8b7d15)
 
 ### October 18th
 
