--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -33,7 +33,7 @@
 
 ### October 18th
 
-- Topic: TBA
+- Topic: EINNET: Optimizing Tensor Programs with Derivation-Based Transformations
 - Presenters: Yi You, Hongrui Zhan
 
 ### October 25th
