Add topic for Nov 8th

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -48,7 +48,7 @@
 
 ### November 8th
 
-- Topic: TBA
+- Topic: Mira: A Program-Behavior-Guided Far Memory System
 - Presenters: Juncheng Zhang, Yufei Wu
 
 ### November 15th
