--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -35,6 +35,7 @@
 
 - Topic: EINNET: Optimizing Tensor Programs with Derivation-Based Transformations
 - Presenters: Yi You, Hongrui Zhan
+- Links [Paper](https://www.usenix.org/system/files/osdi23-zheng.pdf)
 
 ### October 25th
 
@@ -63,8 +64,9 @@
 
 ### November 29th
 
-- Topic: TBA
+- Topic: Ship your Critical Section, Not Your Data: Enabling Transparent Delegation with TCLocks
 - Presenters: Hengyu Liang, Zhihao Le, Jiawei Yi
+- Links [Paper](https://www.usenix.org/system/files/osdi23-gupta.pdf)
 
 ### December 6th
 
