--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -66,7 +66,7 @@
 
 - Topic: Ship your Critical Section, Not Your Data: Enabling Transparent Delegation with TCLocks
 - Presenters: Hengyu Liang, Zhihao Le, Jiawei Yi
-- Links [Paper](https://www.usenix.org/system/files/osdi23-gupta.pdf)
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-gupta.pdf)
 
 ### December 6th
 
