--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -35,12 +35,13 @@
 
 - Topic: EINNET: Optimizing Tensor Programs with Derivation-Based Transformations
 - Presenters: Yi You, Hongrui Zhan
-- Links [Paper](https://www.usenix.org/system/files/osdi23-zheng.pdf)
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-zheng.pdf)
 
 ### October 25th
 
 - Topic: Take Out the TraChe: Maximizing (Tra)nsactional Ca(che) Hit Rate
 - Presenters: Sen Han, Chenhan Wang
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-cheng.pdf)
 
 ### November 1st
 
