--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -47,6 +47,7 @@
 
 - Topic: Chardonnay: Fast and General Datacenter Transactions for On-Disk Databases
 - Presenters: Yicheng Zhang, Kunzhao Xu, Zheng Yang
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-eldeeb.pdf)
 
 ### November 8th
 
