Add summary for October 18th, 2023

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -35,7 +35,8 @@
 
 - Topic: EINNET: Optimizing Tensor Programs with Derivation-Based Transformations
 - Presenters: Yi You, Hongrui Zhan
-- Links: [Paper](https://www.usenix.org/system/files/osdi23-zheng.pdf)
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-zheng.pdf),
+[Summary](https://zhuanlan.zhihu.com/p/664124915)
 
 ### October 25th
 
