Add video for October 25th, 2023

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -42,7 +42,8 @@
 
 - Topic: Take Out the TraChe: Maximizing (Tra)nsactional Ca(che) Hit Rate
 - Presenters: Sen Han, Chenhan Wang
-- Links: [Paper](https://www.usenix.org/system/files/osdi23-cheng.pdf)
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-cheng.pdf),
+[Video](https://www.bilibili.com/video/BV1fM411D76Q)
 
 ### November 1st
 
