Add paper for Nov 15th, 2023

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -59,8 +59,9 @@
 
 ### November 15th
 
-- Topic: TBA
+- Topic: eZNS: An Elastic Zoned Namespace for Commodity ZNS SSDs
 - Presenters: Qingyuan Chen, Bosen Yang
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-min.pdf)
 
 ### November 22nd
 
