Add topic for Dec 13th, 2023

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -81,8 +81,9 @@
 
 ### December 13th
 
-- Topic: TBA
-- Presenters: Zewen Jin, Jiaan Zhu, Yinhe Chen
+- Topic: Oobleck: Resilient Distributed Training of Large Models Using Pipeline Templates
+- Presenters: Yinhe Chen, Jiaan Zhu, Zewen Jin
+- Links: [Paper](https://dl.acm.org/doi/10.1145/3600006.3613152)
 
 ### December 20th
 
