--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -65,8 +65,9 @@
 
 ### November 22nd
 
-- Topic: TBA
+- Topic: Welder: Scheduling Deep Learning Memory Access via Tile-graph
 - Presenters: Shiyi Wang
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-shi.pdf)
 
 ### November 29th
 
