Update presenters and links for Dec 6th, 2023

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -78,7 +78,8 @@
 ### December 6th
 
 - Topic: Ditto: An Elastic and Adaptive Memory-Disaggregated Caching System
-- Presenters: Chao Bi
+- Presenters: Chao Bi, Xiaoqi Li
+- Links: [Paper](https://dl.acm.org/doi/10.1145/3600006.3613144)
 
 ### December 13th
 
