Add topic for Dec 20th, 2023

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -89,8 +89,9 @@
 
 ### December 20th
 
-- Topic: TBA
-- Presenters: Luofan Chen
+- Topic: TreeSLS: A Whole-system Persistent Microkernel with Tree-structured State Checkpoint on NVM
+- Presenters: Luofan Chen, Jiyang Wang, Longhao Chen
+- Links: [Paper](https://dl.acm.org/doi/10.1145/3600006.3613160)
 
 ### December 27th
 
