Update presenters and links for Dec 27th, 2023

--- a/src/2023_fall.md
+++ b/src/2023_fall.md
@@ -36,14 +36,14 @@
 - Topic: EINNET: Optimizing Tensor Programs with Derivation-Based Transformations
 - Presenters: Yi You, Hongrui Zhan
 - Links: [Paper](https://www.usenix.org/system/files/osdi23-zheng.pdf),
-[Summary](https://zhuanlan.zhihu.com/p/664124915)
+  [Summary](https://zhuanlan.zhihu.com/p/664124915)
 
 ### October 25th
 
 - Topic: Take Out the TraChe: Maximizing (Tra)nsactional Ca(che) Hit Rate
 - Presenters: Sen Han, Chenhan Wang
 - Links: [Paper](https://www.usenix.org/system/files/osdi23-cheng.pdf),
-[Video](https://www.bilibili.com/video/BV1fM411D76Q)
+  [Video](https://www.bilibili.com/video/BV1fM411D76Q)
 
 ### November 1st
 
@@ -95,5 +95,6 @@
 
 ### December 27th
 
-- Topic: TBA
+- Topic: Replicating Persistent Memory Key-Value Stores with Efficient RDMA Abstraction
 - Presenters: Lijun Miao, Yanhui Chen
+- Links: [Paper](https://www.usenix.org/system/files/osdi23-wang-qing.pdf)
