24 Fall: fill content and beautify

--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -12,32 +12,43 @@ The playback video and text summary will be uploaded to [bilibili](https://space
 
 ## Schedule
 
-### Upcoming: September 03
+### 🔥 September 03
 
-- Topic:
-- Presenters: Chaoyi Ruan, Kunzhao Xu, Bosen Yang
+- 💡 [OSDI'24] [Parrot: Efficient Serving of LLM-based Applications with Semantic Variable](https://www.usenix.org/system/files/osdi24-lin-chaofan.pdf)
+- 🙎‍♂️ Chaoyi Ruan, Kunzhao Xu, Bosen Yang
+- [📅 Slides](), [📃 summary](), [📺 vedio]()
 
 ### September 11
 
-- Topic:
-- Presenters: Jiaan Ju (Andy)
+- 💡
+- 🙎‍♂️ Jiaan Ju (Andy)
 
 ### September 18
 
+- 💡 [OSDI'24] [Nomad: Non-Exclusive Memory Tiering via Transactional Page Migration](https://www.usenix.org/system/files/osdi24-xiang.pdf)
+- 🙎‍♂️ Jiahao Zhu
+
 ### September 24
 
-### October 01
+- 💡
+- 🙎‍♂️ Yuming Xu, Hengyu Liang
 
 ### October 08
+
+- 💡
+- 🙎‍♂️ Jingze Huo
 
 ### October 15
 
 ### October 22
 
+- 💡 [OSDI'24] [Harvesting Memory-bound CPU Stall Cycles in Software with MSH](https://www.usenix.org/system/files/osdi24-luo.pdf)
+- 🙎‍♂️ Luofan Chen, Jiyang Wang
+
 ### October 29
 
-- Topic: ServerlessLLM: Low-Latency Serverless Inference for Large Language Models. (OSDI 24)
-- Presenters: Mingxuan Liu (NPU, Northwestern Polytechnical University)
+- 💡 [OSDI'24] [ServerlessLLM: Low-Latency Serverless Inference for Large Language Models](https://www.usenix.org/system/files/osdi24-fu.pdf)
+- 🙎‍♂️ Mingxuan Liu (NPU, Northwestern Polytechnical University)
 
 ### November 5
 
