24 Fall: fix typo

--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -1,6 +1,6 @@
 # 2024 Fall
 
-## Seicific Requirements
+## Speicific Requirements
 
 - We focus on papers published on SOSP and OSDI within 2 years .
 - We adopt a "1+N" presentation format: one person will present the main content, while the other N members will assist with preparation and handle the Q&A session.
