24 Fall: change icon

--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -16,7 +16,7 @@ The playback video and text summary will be uploaded to [bilibili](https://space
 
 - 💡 [OSDI'24] [Parrot: Efficient Serving of LLM-based Applications with Semantic Variable](https://www.usenix.org/system/files/osdi24-lin-chaofan.pdf)
 - 🙎‍♂️ Chaoyi Ruan, Kunzhao Xu, Bosen Yang
-- [📅 Slides](), [📃 summary](), [📺 vedio]()
+- [📕 slides](), [📃 summary](), [📺 vedio]()
 
 ### September 11
 
