24 Fall: update list

--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -50,7 +50,7 @@ The playback video and text summary will be uploaded to [bilibili](https://space
 - 💡 [OSDI'24] [ServerlessLLM: Low-Latency Serverless Inference for Large Language Models](https://www.usenix.org/system/files/osdi24-fu.pdf)
 - 🙎‍♂️ Mingxuan Liu (NPU, Northwestern Polytechnical University)
 
-### November 5
+### November 05
 
 ### November 12
 
@@ -58,9 +58,15 @@ The playback video and text summary will be uploaded to [bilibili](https://space
 
 ### November 26
 
-### December 3
+### December 03
+
+- 💡 [SOSP'24] []()
+- 🙎‍♂️ Zewen Jin (zevvin)
 
 ### December 10
+
+- 💡 [SOSP'24] []()
+- 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
 
 ### December 17
 
