24 Fall: fix typo

--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -8,7 +8,7 @@
 
 ## Other Information
 
-The playback video and text summary will be uploaded to [bilibili](https://space.bilibili.com/3493280155175017) and [zhihu](https://www.zhihu.com/people/ustc-nhpcc/) as soon as possible.
+The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/people/ustc-nhpcc" target="_blank">zhihu</a>  as soon as possible.
 
 ## Schedule
 
@@ -21,12 +21,12 @@ The playback video and text summary will be uploaded to [bilibili](https://space
 ### September 11
 
 - 💡
-- 🙎‍♂️ Jiaan Ju (Andy)
+- 🙎‍♂️ Jiaan Zhu (Andy)
 
 ### September 18
 
 - 💡 [OSDI'24] [Nomad: Non-Exclusive Memory Tiering via Transactional Page Migration](https://www.usenix.org/system/files/osdi24-xiang.pdf)
-- 🙎‍♂️ Jiahao Zhu
+- 🙎‍♂️ Jiahao Li
 
 ### September 24
 
