--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -16,7 +16,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [Parrot: Efficient Serving of LLM-based Applications with Semantic Variable](https://www.usenix.org/system/files/osdi24-lin-chaofan.pdf)
 - 🙎‍♂️ Chaoyi Ruan, Kunzhao Xu, Bosen Yang
-- [📕 slides](), [📃 summary](), [📺 video]()
+- [📕 slides](./slides/240903-parrot.pdf), [📃 summary](), [📺 video]()
 
 ### September 11
 
@@ -55,6 +55,9 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### November 12
 
 ### November 19
+
+- 💡
+- 🙎‍♂️ Sen Han, Yicheng Zhang
 
 ### November 26
 
