--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -20,8 +20,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### September 11
 
-- 💡
-- 🙎‍♂️ Jiaan Zhu (Andy)
+- 💡 [SOSP'23] [PIT: Optimization of Dynamic Sparse Deep Learning Models via Permutation Invariant Transformation](https://dl.acm.org/doi/abs/10.1145/3600006.3613139)
+- 🙎‍♂️ Jiaan Zhu (Andy), Qinghe Wang, Long Zhao
 
 ### September 18
 
