--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -30,7 +30,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### September 24
 
-- 💡
+- 💡 [OSDI'24] [μSlope: High Compression and Fast Search on Semi-Structured Logs](https://www.usenix.org/system/files/osdi24-wang-rui.pdf)
 - 🙎‍♂️ Yuming Xu, Hengyu Liang
 
 ### October 08
@@ -63,8 +63,8 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 03
 
-- 💡 [SOSP'24] []()
-- 🙎‍♂️ Zewen Jin (zevvin)
+- 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism]()
+- 🙎‍♂️ Zewen Jin
 
 ### December 10
 
