--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -16,14 +16,15 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [Parrot: Efficient Serving of LLM-based Applications with Semantic Variable](https://www.usenix.org/system/files/osdi24-lin-chaofan.pdf)
 - 🙎‍♂️ Chaoyi Ruan, Kunzhao Xu, Bosen Yang
-- [📕 slides](./slides/240903-parrot.pdf), [📃 summary](), [📺 video]()
+- [📕 slides](./slides/240903-parrot.pdf), [📃 summary](), [📺 video](https://www.bilibili.com/video/BV1nsHmemEV6)
 
-### 🔥 September 10
+### September 10
 
 - 💡 [SOSP'23] [PIT: Optimization of Dynamic Sparse Deep Learning Models via Permutation Invariant Transformation](https://dl.acm.org/doi/abs/10.1145/3600006.3613139)
 - 🙎‍♂️ Jiaan Zhu (Andy), Qinghe Wang, Long Zhao
+- [📕 slides](./slides/240910-pit.pdf)
 
-### September 18
+### 🔥 September 18
 
 - 💡 [OSDI'24] [Nomad: Non-Exclusive Memory Tiering via Transactional Page Migration](https://www.usenix.org/system/files/osdi24-xiang.pdf)
 - 🙎‍♂️ Jiahao Li
@@ -34,9 +35,6 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Yuming Xu, Hengyu Liang
 
 ### October 08
-
-- 💡
-- 🙎‍♂️ Jingze Huo
 
 ### October 15
 
@@ -56,15 +54,14 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### November 19
 
-- 💡
-- 🙎‍♂️ Sen Han, Yicheng Zhang
-
 ### November 26
+- 💡 [SOSP'24] [BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance]()
+- 🙎‍♂️ Jingze Huo
 
 ### December 03
 
 - 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism]()
-- 🙎‍♂️ Zewen Jin
+- 🙎‍♂️ Zewen Jin, Hongrui Zhan
 
 ### December 10
 
@@ -72,6 +69,9 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
 
 ### December 17
+
+- 💡 [SOSP'24] [CHIME: A Cache-Efficient and High-Performance Hybrid Index on Disagg]()
+- ‍♂️ Sen Han, Yicheng Zhang
 
 ### December 24
 
