--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -22,12 +22,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [SOSP'23] [PIT: Optimization of Dynamic Sparse Deep Learning Models via Permutation Invariant Transformation](https://dl.acm.org/doi/abs/10.1145/3600006.3613139)
 - 🙎‍♂️ Jiaan Zhu (Andy), Qinghe Wang, Long Zhao
-- [📕 slides](./slides/240910-pit.pdf)
+- [📕 slides](./slides/240910-pit.pdf), [📺 video](https://www.bilibili.com/video/BV14b4peiEus)
 
 ### 🔥 September 18
 
 - 💡 [OSDI'24] [Nomad: Non-Exclusive Memory Tiering via Transactional Page Migration](https://www.usenix.org/system/files/osdi24-xiang.pdf)
 - 🙎‍♂️ Jiahao Li
+- [📕 slides](./slides/240918-nomad.pdf)
 
 ### September 24
 
@@ -38,6 +39,9 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### October 15
 
+- 💡
+- 🙎‍♂️ Ping Gong
+
 ### October 22
 
 - 💡 [OSDI'24] [Harvesting Memory-bound CPU Stall Cycles in Software with MSH](https://www.usenix.org/system/files/osdi24-luo.pdf)
@@ -46,13 +50,22 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### October 29
 
 - 💡 [OSDI'24] [ServerlessLLM: Low-Latency Serverless Inference for Large Language Models](https://www.usenix.org/system/files/osdi24-fu.pdf)
-- 🙎‍♂️ Mingxuan Liu (NPU, Northwestern Polytechnical University)
+- 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
 
 ### November 05
 
+- 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections]()
+- 🙎‍♂️ Zhaolin Duan, Yihan Wang, Yichi Chen **(*all from* TJU, Tianjin University)**
+
 ### November 12
 
+- 💡
+- 🙎‍♂️ Wenhao Huang, Yuhang Zhang, Yanjie Wang **(*all from* TJU, Tianjin University)**
+
 ### November 19
+
+- 💡
+- 🙎‍♂️ Zheng Yang, Yicheng Zhang
 
 ### November 26
 - 💡 [SOSP'24] [BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance]()
@@ -71,8 +84,11 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 ### December 17
 
 - 💡 [SOSP'24] [CHIME: A Cache-Efficient and High-Performance Hybrid Index on Disagg]()
-- ‍♂️ Sen Han, Yicheng Zhang
+- 🙎‍♂️ Sen Han
 
 ### December 24
+
+- 💡 [OSDI'23] [Effectively Scheduling Computational Graphs of Deep Neural Networks toward Their Domain-Specific Accelerators](https://www.usenix.org/system/files/osdi23-zhao.pdf)
+- 🙎‍♂️ Shiyi Wang, Jingbo Su
 
 ### December 31
