24 Fall: zhihu summary

--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -8,7 +8,7 @@
 
 ## Other Information
 
-The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/people/ustc-nhpcc" target="_blank">zhihu</a>  as soon as possible.
+The playback video and text summary will be uploaded to <a href="https://space.bilibili.com/3493280155175017/channel/collectiondetail?sid=3787828" target="_blank">bilibili</a> and <a href="https://www.zhihu.com/column/c_1819774258647277568" target="_blank">zhihu</a>  as soon as possible.
 
 ## Schedule
 
@@ -16,7 +16,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [Parrot: Efficient Serving of LLM-based Applications with Semantic Variable](https://www.usenix.org/system/files/osdi24-lin-chaofan.pdf)
 - 🙎‍♂️ Chaoyi Ruan, Kunzhao Xu, Bosen Yang
-- [📕 slides](./slides/240903-parrot.pdf), [📃 summary](), [📺 video](https://www.bilibili.com/video/BV1nsHmemEV6)
+- [📕 slides](./slides/240903-parrot.pdf), [📃 summary](https://zhuanlan.zhihu.com/p/720718141), [📺 video](https://www.bilibili.com/video/BV1nsHmemEV6)
 
 ### September 10
 
