--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -16,7 +16,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [Parrot: Efficient Serving of LLM-based Applications with Semantic Variable](https://www.usenix.org/system/files/osdi24-lin-chaofan.pdf)
 - 🙎‍♂️ Chaoyi Ruan, Kunzhao Xu, Bosen Yang
-- [📕 slides](./slides/240903-parrot.pdf), [📃 summary](https://zhuanlan.zhihu.com/p/720718141), [📺 video](https://www.bilibili.com/video/BV1nsHmemEV6)
+- [📕 slides](./slides/240903-parrot.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/720718141), [📺 video](https://www.bilibili.com/video/BV1nsHmemEV6)
 
 ### September 10
 
