--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -22,15 +22,15 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [SOSP'23] [PIT: Optimization of Dynamic Sparse Deep Learning Models via Permutation Invariant Transformation](https://dl.acm.org/doi/abs/10.1145/3600006.3613139)
 - 🙎‍♂️ Jiaan Zhu (Andy), Qinghe Wang, Long Zhao
-- [📕 slides](./slides/240910-pit.pdf), [📺 video](https://www.bilibili.com/video/BV14b4peiEus)
+- [📕 slides](./slides/240910-pit.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/720960564), [📺 video](https://www.bilibili.com/video/BV14b4peiEus)
 
-### 🔥 September 18
+### September 18
 
 - 💡 [OSDI'24] [Nomad: Non-Exclusive Memory Tiering via Transactional Page Migration](https://www.usenix.org/system/files/osdi24-xiang.pdf)
 - 🙎‍♂️ Jiahao Li
-- [📕 slides](./slides/240918-nomad.pdf)
+- [📕 slides](./slides/240918-nomad.pdf), [📺 video](https://www.bilibili.com/video/BV1GktXeAEeQ)
 
-### September 24
+### 🔥 September 24
 
 - 💡 [OSDI'24] [μSlope: High Compression and Fast Search on Semi-Structured Logs](https://www.usenix.org/system/files/osdi24-wang-rui.pdf)
 - 🙎‍♂️ Yuming Xu, Hengyu Liang
