--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -34,6 +34,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [μSlope: High Compression and Fast Search on Semi-Structured Logs](https://www.usenix.org/system/files/osdi24-wang-rui.pdf)
 - 🙎‍♂️ Yuming Xu, Hengyu Liang
+- [📕 slides](./slides/240924-uslope.pdf)
 
 ### October 08
 
