--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -30,13 +30,17 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Jiahao Li
 - [📕 slides](./slides/240918-nomad.pdf), [📺 video](https://www.bilibili.com/video/BV1GktXeAEeQ)
 
-### 🔥 September 24
+### September 24
 
 - 💡 [OSDI'24] [μSlope: High Compression and Fast Search on Semi-Structured Logs](https://www.usenix.org/system/files/osdi24-wang-rui.pdf)
 - 🙎‍♂️ Yuming Xu, Hengyu Liang
 - [📕 slides](./slides/240924-uslope.pdf)
 
-### October 08
+### 🔥 October 08
+
+- 💡 *How (and How Not) to Write a Good Systems Paper*
+- 🙎‍♂️ **Xiaosong Ma (*MBZUAI*), Kang Chen (*THU*), Cheng Li (*USTC*)**
+
 
 ### October 15
 
