--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -28,13 +28,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [Nomad: Non-Exclusive Memory Tiering via Transactional Page Migration](https://www.usenix.org/system/files/osdi24-xiang.pdf)
 - 🙎‍♂️ Jiahao Li
-- [📕 slides](./slides/240918-nomad.pdf), [📺 video](https://www.bilibili.com/video/BV1GktXeAEeQ)
+- [📕 slides](./slides/240918-nomad.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/721388643), [📺 video](https://www.bilibili.com/video/BV1GktXeAEeQ)
 
 ### September 24
 
 - 💡 [OSDI'24] [μSlope: High Compression and Fast Search on Semi-Structured Logs](https://www.usenix.org/system/files/osdi24-wang-rui.pdf)
 - 🙎‍♂️ Yuming Xu, Hengyu Liang
-- [📕 slides](./slides/240924-uslope.pdf)
+- [📕 slides](./slides/240924-uslope.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/732836055), [📺 video](https://www.bilibili.com/video/BV1j3sdegEB2) 
 
 ### 🔥 October 08
 
