--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -36,16 +36,16 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Yuming Xu, Hengyu Liang
 - [📕 slides](./slides/240924-uslope.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/732836055), [📺 video](https://www.bilibili.com/video/BV1j3sdegEB2) 
 
-### 🔥 October 08
+### October 08
 
 - 💡 *How (and How Not) to Write a Good Systems Paper*
 - 🙎‍♂️ **Xiaosong Ma (*MBZUAI*), Kang Chen (*THU*), Cheng Li (*USTC*)**
 
 
-### October 15
+### 🔥 October 15
 
-- 💡
-- 🙎‍♂️ Ping Gong
+- 💡 [OSDI'24] [InfiniGen: Efficient Generative Inference of Large Language Models with Dynamic KV Cache Management](https://www.usenix.org/system/files/osdi24-lee.pdf)
+- 🙎‍♂️ Ping Gong, Jiawei Yi, Juncheng Zhang
 
 ### October 22
 
