--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -40,6 +40,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 *How (and How Not) to Write a Good Systems Paper*
 - 🙎‍♂️ **Xiaosong Ma (*MBZUAI*), Kang Chen (*THU*), Cheng Li (*USTC*)**
+- [📕 slides](./slides/241008-Systems%20and%20Papers%20(slides).pdf)
 
 
 ### 🔥 October 15
