--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -47,6 +47,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [InfiniGen: Efficient Generative Inference of Large Language Models with Dynamic KV Cache Management](https://www.usenix.org/system/files/osdi24-lee.pdf)
 - 🙎‍♂️ Ping Gong, Jiawei Yi, Juncheng Zhang
+- [📕 slides](./slides/241015-infinigen.pdf)
 
 ### October 22
 
