--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -43,13 +43,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - [📕 slides](./slides/241008-Systems%20and%20Papers%20(slides).pdf)
 
 
-### 🔥 October 15
+### October 15
 
 - 💡 [OSDI'24] [InfiniGen: Efficient Generative Inference of Large Language Models with Dynamic KV Cache Management](https://www.usenix.org/system/files/osdi24-lee.pdf)
 - 🙎‍♂️ Ping Gong, Jiawei Yi, Juncheng Zhang
-- [📕 slides](./slides/241015-infinigen.pdf)
+- [📕 slides](./slides/241015-infinigen.pdf), [📺 video](https://www.bilibili.com/video/BV1oWmMYLE2R/) 
 
-### October 22
+### 🔥 October 22
 
 - 💡 [OSDI'24] [Harvesting Memory-bound CPU Stall Cycles in Software with MSH](https://www.usenix.org/system/files/osdi24-luo.pdf)
 - 🙎‍♂️ Luofan Chen, Jiyang Wang
@@ -99,3 +99,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Shiyi Wang, Jingbo Su
 
 ### December 31
+
+### January 7
+
+- 💡 [SOSP'24] [TrEnv: Transparently Share Serverless Execution Environments Across Different Functions and Nodes](https://www.usenix.org/system/files/osdi24-fu.pdf)
+- 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
+
+### January 14
+
+### January 21
