--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -49,12 +49,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Ping Gong, Jiawei Yi, Juncheng Zhang
 - [📕 slides](./slides/241015-infinigen.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/1633081750), [📺 video](https://www.bilibili.com/video/BV1oWmMYLE2R/) 
 
-### 🔥 October 22
+### October 22
 
 - 💡 [OSDI'24] [Harvesting Memory-bound CPU Stall Cycles in Software with MSH](https://www.usenix.org/system/files/osdi24-luo.pdf)
 - 🙎‍♂️ Luofan Chen, Jiyang Wang
+- [📕 slides](./slides/241022-MSH.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/2983911590), [📺 video](https://www.bilibili.com/video/BV14k1NYUEUV) 
 
-### October 29
+### 🔥 October 29
 
 - 💡 [OSDI'24] [ServerlessLLM: Low-Latency Serverless Inference for Large Language Models](https://www.usenix.org/system/files/osdi24-fu.pdf)
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
@@ -76,12 +77,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### November 26
 - 💡 [SOSP'24] [BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance]()
-- 🙎‍♂️ Jingze Huo
+- 🙎‍♂️ Jingze Huo, Qingyuan Chen
 
 ### December 03
 
 - 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism]()
-- 🙎‍♂️ Zewen Jin, Hongrui Zhan
+- 🙎‍♂️ Zewen Jin, Hongrui Zhan, Shen Fu
 
 ### December 10
 
