--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -91,7 +91,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 17
 
-- 💡 [SOSP'24] [CHIME: A Cache-Efficient and High-Performance Hybrid Index on Disagg]()
+- 💡 [SOSP'24] [DRust: Language-Guided Distributed Shared Memory with Fine Granularity, Full Transparency]()
 - 🙎‍♂️ Sen Han
 
 ### December 24
