--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -59,6 +59,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [ServerlessLLM: Low-Latency Serverless Inference for Large Language Models](https://www.usenix.org/system/files/osdi24-fu.pdf)
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
+- [📕 slides](./slides/241029-ServerlessLLM.pdf)
 
 ### November 05
 
@@ -67,7 +68,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### November 12
 
-- 💡
+- 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections]()
 - 🙎‍♂️ Wenhao Huang, Yuhang Zhang, Yanjie Wang **(*all from* TJU, Tianjin University)**
 
 ### November 19
@@ -86,7 +87,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 10
 
-- 💡 [SOSP'24] []()
+- 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU]()
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
 
 ### December 17
