--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -55,21 +55,22 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Luofan Chen, Jiyang Wang
 - [📕 slides](./slides/241022-MSH.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/2983911590), [📺 video](https://www.bilibili.com/video/BV14k1NYUEUV) 
 
-### 🔥 October 29
+### October 29
 
 - 💡 [OSDI'24] [ServerlessLLM: Low-Latency Serverless Inference for Large Language Models](https://www.usenix.org/system/files/osdi24-fu.pdf)
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
 - [📕 slides](./slides/241029-ServerlessLLM.pdf)
 
-### November 05
+### 🔥 November 05
 
-- 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections]()
-- 🙎‍♂️ Zhaolin Duan, Yihan Wang, Yichi Chen **(*all from* TJU, Tianjin University)**
+- 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation]()
+- 🙎‍♂️ Wenhao Huang, Yichi Chen, Yanjie Wang **(*all from* TJU, Tianjin University)**
 
 ### November 12
 
 - 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections]()
-- 🙎‍♂️ Wenhao Huang, Yuhang Zhang, Yanjie Wang **(*all from* TJU, Tianjin University)**
+- 🙎‍♂️ Zhaolin Duan, Yuhang Zhang, Yihan Wang **(*all from* TJU, Tianjin University)**
+
 
 ### November 19
 
@@ -92,7 +93,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 17
 
-- 💡 [SOSP'24] [CHIME: A Cache-Efficient and High-Performance Hybrid Index on Disagg]()
+- 💡 [OSDI'24] [DRust: Language-Guided Distributed Shared Memory with Fine Granularity, Full Transparency, and Ultra Efficiency](https://www.usenix.org/system/files/osdi24-ma-haoran.pdf)
 - 🙎‍♂️ Sen Han
 
 ### December 24
@@ -102,9 +103,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 31
 
+- 💡 
+- 🙎‍♂️ Yinhe Chen
+
 ### January 7
 
-- 💡 [SOSP'24] [TrEnv: Transparently Share Serverless Execution Environments Across Different Functions and Nodes](https://www.usenix.org/system/files/osdi24-fu.pdf)
+- 💡 [SOSP'24] [TrEnv: Transparently Share Serverless Execution Environments Across Different Functions and Nodes]()
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
 
 ### January 14
