--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -59,7 +59,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [OSDI'24] [ServerlessLLM: Low-Latency Serverless Inference for Large Language Models](https://www.usenix.org/system/files/osdi24-fu.pdf)
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
-- [📕 slides](./slides/241029-ServerlessLLM.pdf)
+- [📕 slides](./slides/241029-ServerlessLLM.pdf), [📺 video](https://www.bilibili.com/video/BV1VjSGYsEqp) 
 
 ### 🔥 November 05
 
