--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -63,12 +63,12 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### 🔥 November 05
 
-- 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation]()
+- 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation](https://arxiv.org/abs/2405.14009)
 - 🙎‍♂️ Wenhao Huang, Yichi Chen, Yanjie Wang **(*all from* TJU, Tianjin University)**
 
 ### November 12
 
-- 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections]()
+- 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections](https://arxiv.org/abs/2312.05181)
 - 🙎‍♂️ Zhaolin Duan, Yuhang Zhang, Yihan Wang **(*all from* TJU, Tianjin University)**
 
 
@@ -78,17 +78,17 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Zheng Yang, Yicheng Zhang
 
 ### November 26
-- 💡 [SOSP'24] [BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance]()
+- 💡 [SOSP'24] BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance
 - 🙎‍♂️ Jingze Huo, Qingyuan Chen
 
 ### December 03
 
-- 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism]()
+- 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism](https://arxiv.org/abs/2404.09526)
 - 🙎‍♂️ Zewen Jin, Hongrui Zhan, Shen Fu
 
 ### December 10
 
-- 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU]()
+- 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU](https://arxiv.org/abs/2312.12456)
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
 
 ### December 17
@@ -108,7 +108,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### January 7
 
-- 💡 [SOSP'24] [TrEnv: Transparently Share Serverless Execution Environments Across Different Functions and Nodes]()
+- 💡 [OSDI'24] [DistServe: Disaggregating Prefill and Decoding for Goodput-optimized Large Language Model Serving](https://www.usenix.org/system/files/osdi24-zhong-yinmin.pdf)
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
 
 ### January 14
