--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -65,6 +65,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation](https://arxiv.org/abs/2405.14009)
 - 🙎‍♂️ Wenhao Huang, Yichi Chen, Yanjie Wang **(*all from* TJU, Tianjin University)**
+- [📕 slides](./slides/241105-ReCycle.pdf)
 
 ### November 12
 
