--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -61,13 +61,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Mingxuan Liu **(NPU, Northwestern Polytechnical University)**
 - [📕 slides](./slides/241029-ServerlessLLM.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/4905218073), [📺 video](https://www.bilibili.com/video/BV1VjSGYsEqp) 
 
-### 🔥 November 05
+### November 05
 
 - 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation](https://arxiv.org/abs/2405.14009)
 - 🙎‍♂️ Wenhao Huang, Yichi Chen, Yanjie Wang **(*all from* TJU, Tianjin University)**
-- [📕 slides](./slides/241105-ReCycle.pdf)
+- [📕 slides](./slides/241105-ReCycle.pdf), [📺 video](https://www.bilibili.com/video/BV13nDTYgEiF) 
 
-### November 12
+### 🔥 November 12
 
 - 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections](https://arxiv.org/abs/2312.05181)
 - 🙎‍♂️ Zhaolin Duan, Yuhang Zhang, Yihan Wang **(*all from* TJU, Tianjin University)**
