--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -94,7 +94,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### December 17
 
-- 💡 [OSDI'24] [DRust: Language-Guided Distributed Shared Memory with Fine Granularity, Full Transparency, and Ultra Efficiency](https://www.usenix.org/system/files/osdi24-ma-haoran.pdf)
+- 💡 [OSDI'24] [Motor: Enabling Multi-Versioning for Distributed Transactions on Disaggregated Memory](https://www.usenix.org/system/files/osdi24-zhang-ming.pdf)
 - 🙎‍♂️ Sen Han
 
 ### December 24
