--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -65,7 +65,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation](https://arxiv.org/abs/2405.14009)
 - 🙎‍♂️ Wenhao Huang, Yichi Chen, Yanjie Wang **(*all from* TJU, Tianjin University)**
-- [📕 slides](./slides/241105-ReCycle.pdf), [📺 video](https://www.bilibili.com/video/BV13nDTYgEiF) 
+- [📕 slides](./slides/241105-ReCycle.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/6420565955), [📺 video](https://www.bilibili.com/video/BV13nDTYgEiF) 
 
 ### 🔥 November 12
 
@@ -75,7 +75,7 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### November 19
 
-- 💡
+- 💡 [SOSP'23] [UGache: A Unified GPU Cache for Embedding-based  Deep Learning](https://dl.acm.org/doi/10.1145/3600006.3613169)
 - 🙎‍♂️ Zheng Yang, Yicheng Zhang
 
 ### November 26
