--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -67,13 +67,14 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Wenhao Huang, Yichi Chen, Yanjie Wang **(*all from* TJU, Tianjin University)**
 - [📕 slides](./slides/241105-ReCycle.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/6420565955), [📺 video](https://www.bilibili.com/video/BV13nDTYgEiF) 
 
-### 🔥 November 12
+### November 12
 
 - 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections](https://arxiv.org/abs/2312.05181)
 - 🙎‍♂️ Zhaolin Duan, Yuhang Zhang, Yihan Wang **(*all from* TJU, Tianjin University)**
+- [📕 slides](./slides/241112-Tenplex.pdf), [📺 video](https://www.bilibili.com/video/BV1LgmaYVEbb) 
 
 
-### November 19
+### 🔥 November 19
 
 - 💡 [SOSP'23] [UGache: A Unified GPU Cache for Embedding-based  Deep Learning](https://dl.acm.org/doi/10.1145/3600006.3613169)
 - 🙎‍♂️ Zheng Yang, Yicheng Zhang
