--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -71,16 +71,17 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 - 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections](https://arxiv.org/abs/2312.05181)
 - 🙎‍♂️ Zhaolin Duan, Yuhang Zhang, Yihan Wang **(*all from* TJU, Tianjin University)**
-- [📕 slides](./slides/241112-Tenplex.pdf), [📺 video](https://www.bilibili.com/video/BV1LgmaYVEbb) 
+- [📕 slides](./slides/241112-Tenplex.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/7243017253), [📺 video](https://www.bilibili.com/video/BV1LgmaYVEbb) 
 
 
-### 🔥 November 19
+### November 19
 
 - 💡 [SOSP'23] [UGache: A Unified GPU Cache for Embedding-based  Deep Learning](https://dl.acm.org/doi/10.1145/3600006.3613169)
 - 🙎‍♂️ Zheng Yang, Yicheng Zhang
+- [📕 slides](./slides/241119-UGache.pdf), [📺 video](https://www.bilibili.com/video/BV1E2ScYNEnt) 
 
-### November 26
-- 💡 [SOSP'24] BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance
+### 🔥 November 26
+- 💡 [SOSP'24] [BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance](https://dl.acm.org/doi/pdf/10.1145/3694715.3695953)
 - 🙎‍♂️ Jingze Huo, Qingyuan Chen
 
 ### December 03
