--- a/src/2024_fall.md
+++ b/src/2024_fall.md
@@ -63,13 +63,13 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 
 ### November 05
 
-- 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation](https://arxiv.org/abs/2405.14009)
+- 💡 [SOSP'24] [ReCycle: Resilient Training of Large DNNs using Pipeline Adaptation](https://dl.acm.org/doi/10.1145/3694715.3695960)
 - 🙎‍♂️ Wenhao Huang, Yichi Chen, Yanjie Wang **(*all from* TJU, Tianjin University)**
 - [📕 slides](./slides/241105-ReCycle.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/6420565955), [📺 video](https://www.bilibili.com/video/BV13nDTYgEiF) 
 
 ### November 12
 
-- 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections](https://arxiv.org/abs/2312.05181)
+- 💡 [SOSP'24] [TENPLEX: Dynamic Parallelism for Deep Learning using Parallelizable Tensor Collections](https://dl.acm.org/doi/10.1145/3694715.3695975)
 - 🙎‍♂️ Zhaolin Duan, Yuhang Zhang, Yihan Wang **(*all from* TJU, Tianjin University)**
 - [📕 slides](./slides/241112-Tenplex.pdf), [📃 Q&A summary](https://zhuanlan.zhihu.com/p/7243017253), [📺 video](https://www.bilibili.com/video/BV1LgmaYVEbb) 
 
@@ -80,18 +80,19 @@ The playback video and text summary will be uploaded to <a href="https://space.b
 - 🙎‍♂️ Zheng Yang, Yicheng Zhang
 - [📕 slides](./slides/241119-UGache.pdf), [📺 video](https://www.bilibili.com/video/BV1E2ScYNEnt) 
 
-### 🔥 November 26
+### November 26
 - 💡 [SOSP'24] [BIZA: Design of Self-Governing Block-Interface ZNS AFA for Endurance and Performance](https://dl.acm.org/doi/pdf/10.1145/3694715.3695953)
 - 🙎‍♂️ Jingze Huo, Qingyuan Chen
+- [📕 slides](./slides/241126-BIZA.pdf), [📺 video](https://www.bilibili.com/video/BV1NXzVYpEpo) 
 
-### December 03
+### 🔥 December 03
 
-- 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism](https://arxiv.org/abs/2404.09526)
+- 💡 [SOSP'24] [LoongServe: Efficiently Serving Long-Context Large Language Models with Elastic Sequence Parallelism](https://dl.acm.org/doi/10.1145/3694715.3695948)
 - 🙎‍♂️ Zewen Jin, Hongrui Zhan, Shen Fu
 
 ### December 10
 
-- 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU](https://arxiv.org/abs/2312.12456)
+- 💡 [SOSP'24] [PowerInfer: Fast Large Language Model Serving with a Consumer-grade GPU](https://dl.acm.org/doi/10.1145/3694715.3695964)
 - 🙎‍♂️ Haiquan Wang, Jia He, Jiaqi Ruan
 
 ### December 17
